# EORL

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
config/: CMakeLists.txt  Doxyfile.in
docs/: Doxyfile
scripts/: generate_documentation.sh  quick_rebuild_project.sh  rebuild_project.sh
src/: CMakeLists.txt
src/distances/: CMakeLists.txt  ellipse_closest_surface_point.cpp
src/ellipse/: CMakeLists.txt  ellipse.cpp  ellipse.hpp  ellipse_closest_boundary_point.cpp
src/ellipsoid/: CMakeLists.txt  ellipse.cpp  ellipse.hpp  ellipsoid.cpp  ellipsoid.hpp  ellipsoid_closest_surface_point.cpp
src/utilities/: CMakeLists.txt  newton_raphson.cpp  newton_raphson.hpp
tests/: CMakeLists.txt  main.cpp  test_ellipse.cpp  test_ellipsoid.cpp
